# video-knowledge-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
data/index/: segments.json  segments_cache.json
data/index_vlm/: segments.json  segments_cache.json
docs/: retrieval_logic_summary.md  technical_writeup.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.module.css  index.css
frontend/src/components/: SearchPanel.jsx  SearchPanel.module.css  VideoPlayer.jsx  VideoPlayer.module.css
scripts/: build_index.py  create_sample_video.py  search_segments.py
src/video_knowledge_agent/: __init__.py
src/video_knowledge_agent/api/: app.py
src/video_knowledge_agent/retrieval/: __init__.py  captioner.py  embedder.py  index.py  segmenter.py
src/video_knowledge_agent/utils/: io.py
src/video_knowledge_agent/vision/: __init__.py  detector.py  schemas.py  video_reader.py
tests/: test_detector.py  test_retrieval.py
